fix: various build, type, and CI fixes

--- a/tooling/vite-config/package.json
+++ b/tooling/vite-config/package.json
@@ -2,6 +2,7 @@
   "name": "@solid-foundation/vite-config",
   "private": true,
   "main": "./index.js",
+  "types": "./index.d.ts",
   "type": "module",
   "dependencies": {
     "vite": "^7.1.3",
