--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.6",
     "@testing-library/jest-dom": "^6.8.0",
+    "@types/node": "^22.18.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.3"
   }
