--- a/packages/primitive-button/package.json
+++ b/packages/primitive-button/package.json
@@ -52,7 +52,8 @@
     "solid-js": "^1.9.9",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
-    "vitest": "^3.2.4",
-    "@solid-foundation/vite-config": "workspace:*"
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-solid": "^2.11.8",
+    "vitest": "^3.2.4"
   }
 }
